<resources>
    <string name="app_name">Alto</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="google_sign_in">Sign In With Google</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
    <string name="login_failed">Authentication failed</string>
    <string name="verification_email_to">Verification email sent to</string>
    <string name="verification_email_failed">Failed to send verification email</string>
    <string name="required">Required</string>

    <!-- SETTINGS -->
    <string name="appearance_settings">Appearance</string>
    <string name="download_settings">Download</string>
    <string name="sync_settings">Synchronization</string>
    <string name="account_settings">Account</string>
    <string name="sync_log_out">Log Out</string>

    <string name="download_library">Download Library</string>
    <string name="download_library_summary_on">Your music library will be available offline</string>
    <string name="download_library_summary_off">Your music library won\'t be available offline</string>

    <string name="download_playlist">Download Playlist</string>
    <string name="download_playlist_summary_on">Playlist in your library will be available offline</string>
    <string name="download_playlist_summary_off">Playlist in your library won\'t be available offline</string>

    <string name="cache_size_dialog">Pick a cache size</string>
    <string name="cache_size">Cache size (will reset offline music)</string>

    <string name="refresh_rate_dialog">Choose a refresh rate</string>
    <string name="refresh_rate">Refresh rate</string>

    <string name="player_channel_name">Alto</string>
    <string name="player_channel_description">Alto Player</string>

    <string name="addQueue">Add to Queue</string>
    <string name="removeQueue">Remove from Queue</string>
    <string name="addLibrary">Add to Library</string>
    <string name="removeLibrary">Remove from Library</string>
    <string name="addPlaylist">Add to Playlist</string>
    <string name="removePlaylist">Remove From Playlist</string>
    <string name="goArtist">Go to Artist</string>
    <string name="goAlbum">Go to Album</string>
    <string name="editPlaylist">Edit Details</string>
    <string name="deletePlaylist">Delete Playlist</string>
    <string name="search_hint">Type To Start Searching</string>

    <string name="added">Added</string>
    <string name="updated">Updated</string>
    <string name="deleted">Deleted</string>
    <string name="new_playlist">New Playlist</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="title">Title</string>
    <string name="from">From</string>

    <string name="playlist_title">Playlist Name</string>
    <string name="untitled">Untitled</string>
    <string name="exposure">Set Playlist As Private</string>
    <string name="exposure_public">Public</string>
    <string name="exposure_private">Private</string>

    <string name="artist_album_count">Album</string>
    <string name="artist_album_counts">Albums</string>
    <string name="library_empty">Library Empty</string>
    <string name="song_count">Song</string>
    <string name="song_counts">Songs</string>

    <string name="server_fail">An error occurred trying to access the server. Try again later</string>

    <string name="recommendation">Recommendation</string>
    <string name="trending">Trending</string>
    <string name="genre_mood">Genres</string>
    <string name="new_releases">New Releases</string>
    <string name="charts">Charts</string>

    <string name="playlists">Playlists</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>

    <string name="error_access_file_main">An error occurred trying to access the file</string>
    <string name="no_song">Library Empty</string>
    <string name="sync_song">Sync</string>
    <string name="retry">Retry</string>
    <string name="internet_fail">No internet connection</string>
    <string name="update_library_fail">Unable to update. Try later</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="previous">Prev</string>


    <string name="track_selection_title">Select tracks</string>
    <string name="download_start_error">Failed to start download</string>

    <string name="song_info"></string>
    <string name="repeat_all">Repeat All</string>
    <string name="repeat_song">Repeat Song</string>
    <string name="repeat_off">Repeat Off</string>

    <string name="shuffle_off">Shuffle Off</string>
    <string name="shuffle_on">Shuffle On</string>
    <string name="more_main">&#8230;</string>
    <string name="null_time">00:00</string>

    <string name="nav_item_library">Library</string>
    <string name="nav_item_explore">Explore</string>
    <string name="nav_item_settings">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="action_shuffle">Shufle</string>
    <string name="action_listening">Listening</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="action_add_playlist">Add Playlist</string>
    <string name="action_download">Download</string>
    <string name="action_remove_download">Remove From Downloads</string>
    <string name="remove">Remove</string>
    <string name="remove_all">Remove All</string>
    <string name="remove_device">Remove A Device</string>
    <string name="remove_device_text">You have reached the maximum devices allowed for your account. Click below to remove a device </string>

    <string name="alto_actions">"actions"</string>
    <string name="download_channel_name">"Downloading"</string>

    <string name="email_free">This account doesn\'t exist</string>
    <string name="email_recovery">An email has been sent to you</string>
    <string name="prompt_email">Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="go_back">GO BACK</string>

    <string name="login_title">Sign In</string>
    <string name="registration_title">Sign Up</string>
    <string name="recovery_title">Recover Password</string>

    <string name="sign">Sign Up</string>
    <string name="password_recovery">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="mail">E-mail</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="c_password">Confirm Password</string>
    <string name="agree">I Accept The Terms And Conditions</string>
    <string name="hint">hint error</string>
    <string name="username">Username</string>

    <string name="reset_successful">Reset Successful. You can now login with this device</string>
    <string name="condition_check">You need to accept the Terms</string>
    <string name="email_empty">Please enter your Email Address</string>
    <string name="email_invalid">Please enter a valid Email Address</string>
    <string name="email_registered">This Email is already registered</string>
    <string name="email_check_error">Email Address validity check failed</string>
    <string name="username_registered">This Username is already registered</string>
    <string name="username_check_error">Username validity check failed</string>
    <string name="fname_empty">Please enter your First Name</string>
    <string name="fname_short">Your First Name is too short</string>
    <string name="fname_long">Your First Name is too long</string>
    <string name="uname_empty">Please enter your Username</string>
    <string name="uname_short">Your Username is too short</string>
    <string name="uname_long">Your Username is too long</string>
    <string name="uname_taken">This Username is already taken</string>
    <string name="lname_empty">Please enter your Last Name</string>
    <string name="lname_short">Your Last Name is too short</string>
    <string name="lname_long">Your Last Name is too long</string>
    <string name="password_short">Your Password must have at least 6 characters</string>
    <string name="password_match">Passwords don\'t match</string>
    <string name="password_empty">Please enter your Password</string>
    <string name="password_long">Your password is too long</string>
    <string name="password_condition">Your password must contain at least one upper case letter,one lower case letter, and a special character</string>
    <string name="authenticate">Authenticating...</string>
    <string name="random_error">An unexpected error occured. Please try again later</string>
    <string name="login_registration">No Account Yet? Create One</string>
    <string name="email_sent_registration">A Confirmation Email Has Been Sent To You</string>

    <string name="login_error">Username or Password incorrect</string>
    <string name="registration_error">Registration failed</string>
    <string name="registration_success">Registration succeeded</string>
    <string name="player_source_error">Error setting music source</string>
</resources>
