<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/library"
        android:title="@string/nav_item_library"
        android:enabled="true"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/action_search"
        android:enabled="true"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/explore"
        android:title="@string/nav_item_explore"
        android:enabled="true"
        app:showAsAction="ifRoom"
        />

</menu>
