<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackgroundColor"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/registration_wrapper"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mail"
            android:hint="@string/mail"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/username"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:hint="@string/name"
            android:gravity="center"
            android:layout_below="@+id/mail"
            android:inputType="textPersonName"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password"
            android:gravity="center"
            android:inputType="textPassword"
            android:layout_below="@+id/name"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/c_password"
            android:hint="@string/c_password"
            android:inputType="textPassword"
            android:gravity="center"
            android:layout_below="@+id/password"
            android:focusable="true"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/primaryColor"
            android:id="@+id/sign_2"
            android:hint="@string/sign"
            android:layout_below="@id/c_password"
            />
    </LinearLayout>

</RelativeLayout>
